# ToOp

./: .coveragerc  .dockerignore  .fossa.yml  .gitignore  .gitleaks.toml  .nwa-config.yaml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  README.md  catalog-info.yaml  exp.ipynb  file.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  requirements.txt  ruff.toml  sonar-project.properties  versions.json
.azuredevops/pipelines/: azure-build-pipeline.yaml  docs-build-pipeline.yaml  publish_packages.yaml
.devcontainer/: .bashrc  devcontainer.json  onCreateCommand.sh  postStartCommand.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.json
.github/actions/configure-git-profile/: action.yaml
.github/actions/install-uv/: action.yaml
.github/actions/run-package-tests/: action.yaml  action.yml
.github/actions/setup-python/: action.yaml
.github/workflows/: ci.yaml  contingency_analysis_ci.yaml  dc_solver_ci.yaml  docs.yaml  export-reqs.yaml  fossa_ci.yaml  grid_helpers_ci.yaml  importer_ci.yaml  interfaces_ci.yaml  mkdocs.yaml  pre_commit_hooks.yaml  publish.yaml  publish_backstage_docs.yaml  release.yaml  renovate.yaml  run-package-tests.yml  scorecard.yaml  sonarqube.yaml  test_example_notebooks.yaml  test_pip_install.yaml  topology_optimizer_ci.yaml  validate_commits.yaml  validate_pr_title.yaml
.pre-commit-hooks/: check-sensitive-files.sh  sensitive-files-whitelist.txt
_backstage/: backstage.yaml  config.yaml
benchmark/: assess_benchmarks.py  benchmark_toop.py  index.html
benchmark/configs/: assess.yaml  benchmark.yaml  benchmark_configs.yaml  config_grid_node_breaker.yaml
benchmark/configs/area_settings/: area_settings.yaml
benchmark/configs/grid/: config_grid_node_breaker.yaml
benchmark/configs/lf_config/: lf_config.yaml
benchmarks/: benchmark_run_single_device_epoch.py
contingency_analysis/intro/: index.html
contribution_guide/: index.html
data/case57_xiidm/: grid.xiidm
data/complex_grid/: grid.xiidm
data/complex_substation_layout/: grid.xiidm
data/pegase/: case9241pegase.mat
data/test_grid_node_breaker/: importer_auxiliary_data.json  nminus1_definition.json  static_information.hdf5
data/test_grid_node_breaker/initial_topology/: asset_topology.json
data/test_texas/: ACTIVSg2000.m  ACTIVSg2000.mat
dc_solver/busbar_outage/: index.html
dc_solver/install_time/: index.html
dc_solver/intro/: index.html
dc_solver/nminus2/: index.html
dc_solver/preprocessing/: index.html
dc_solver/quickstart/: index.html
dc_solver/switching_distance/: index.html
dev-deployment/: docker-compose.yaml
docs/: benchmark.md  contribution_guide.md  index.md  quickstart.md  usage.md
docs/architecture/: curative.md  drop_bus_branch.md
docs/contingency_analysis/: cascade.md  intro.md  propagation.md
docs/dc_solver/: busbar_outage.md  install_time.md  intro.md  loadflow_parameters.md  nminus2.md  preprocessing.md  quickstart.md  switching_distance.md
docs/grid_helpers/: intro.md
docs/importer/: intro.md
docs/interfaces/: asset_topology.md  intro.md
docs/overrides/: main.html
docs/references/: reference_benchmark.md  reference_contingency_analysis.md  reference_dc_solver.md  reference_grid_helpers.md  reference_importer.md  reference_interfaces.md  reference_topology_optimizer.md
docs/topology_optimizer/: deepdive.md  intro.md  metrics.md  structure.md
grid_helpers/intro/: index.html
importer/contingency_from_power_factory/: index.html
importer/exporter/: index.html
importer/intro/: index.html
importer/network_graph/: index.html
importer/pandapower/: index.html
importer/pypowsybl/: index.html
interfaces/asset_topology/: index.html
interfaces/intro/: index.html
interfaces/src/: create_asset_bay_svg.py
notebooks/: __init__.py  dc_loadflow_example.ipynb  e2e_pipeline.ipynb  example1_dc_loadflow_example.ipynb  example2_small_grid_toop.ipynb  example3_e2e_pipeline.ipynb  grid_explorer.ipynb  openrao.ipynb  perform_toop_example.ipynb  run_ac_contingency_analysis.ipynb  test.ipynb
notebooks/helpers/: e2e_pipeline_helpers.py
notebooks/tests/: test_notebooks.py
quickstart/: index.html
references/reference_benchmark/: index.html
references/reference_contingency_analysis/: index.html
references/reference_grid_helpers/: index.html
references/reference_importer/: index.html
references/reference_topology_optimizer/: index.html
scripts/: patch_uv_lock_for_fossa.py  test_notebooks.sh  upgrade_all_packages.sh
toop-engine-benchmark/: assess_benchmarks.py  benchmark_toop.py
toop-engine-benchmark/configs/: assess.yaml  benchmark.yaml
topology_optimizer/deepdive/: index.html
topology_optimizer/intro/: index.html
topology_optimizer/metrics/: index.html
topology_optimizer/structure/: index.html
usage/: index.html
v0.10.0/: 404.html  index.html  objects.inv
v0.10.0/benchmark/: index.html
v0.10.0/changelog/: index.html
v0.10.0/contribution_guide/: index.html
v0.10.0/quickstart/: index.html
v0.10.0/usage/: index.html
v0.5.0/: 404.html  index.html  objects.inv  techdocs_metadata.json
v0.5.0/benchmark/: index.html
v0.5.0/changelog/: index.html
v0.5.0/contribution_guide/: index.html
v0.5.0/quickstart/: index.html
v0.5.0/usage/: index.html
v0.6.0/: 404.html  index.html  objects.inv
v0.6.0/benchmark/: index.html
v0.6.0/changelog/: index.html
v0.6.0/contribution_guide/: index.html
v0.6.0/quickstart/: index.html
v0.6.0/usage/: index.html
v0.7.0/: objects.inv
v0.7.0/benchmark/: index.html
v0.7.0/changelog/: index.html
v0.7.0/quickstart/: index.html
v0.7.0/usage/: index.html
v0.7.1/: 404.html  index.html  objects.inv
v0.7.1/changelog/: index.html
v0.7.1/contribution_guide/: index.html
v0.8.0/: objects.inv
v0.8.0/changelog/: index.html
v0.8.0/contribution_guide/: index.html
v0.9.0/: objects.inv
v0.9.0/changelog/: index.html
v0.9.0/quickstart/: index.html
v0.9.0/usage/: index.html
v0.9.1/: 404.html  index.html
v0.9.1/benchmark/: index.html
v0.9.1/changelog/: index.html
(+188 files in other folders)
